--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,7 @@ author: Pierre Louchet
 title: les 24 heures du manche
 email: les24hdumanche@gmail.com
 description: > # this means to ignore newlines until "keywords:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Des musiciens trublions déjantés forts sympathiques!
 keywords:
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://les24heuresdumanche.com" # the base hostname & protocol for your site
